manifest/application/status-check-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-check
  namespace: sihyoun
  labels:
    app: status-check
spec:
  replicas: 1
  selector:
    matchLabels:
      app: status-check
  template:
    metadata:
      labels:
        app: status-check
    spec:
      containers:
        - name: status-check
          image: hsy2001/status-check:latest
