manifest/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: status-check  # Service 이름
  namespace: sihyoun  # 네임스페이스 (필요에 따라 변경)
spec:
  selector:
    app: status-check  # Deployment/Pod의 label 셀렉터와 동일하게 맞춰야 함
  ports:
    - protocol: TCP
      port: 80  # 외부에서 접근할 Service 포트
      targetPort: 8080  # Pod 내 컨테이너 포트
  type: ClusterIP  # 내부 통신용 기본 타입
